[package]
name = "nanots-py"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "nanots_db"
crate-type = ["cdylib"]

[dependencies]
nanots-core = { package = "nanots", path = "../..", default-features = false }
pyo3 = { version = "0.23", features = ["extension-module"] }
datafusion = { version = "43", optional = true }
arrow = { version = "53.4.1", features = ["ffi"], optional = true }

[features]
default = ["arrow", "datafusion"]
# Enable Arrow C Data Interface export (and the Python capsule APIs built on top of it).
arrow = ["nanots-core/arrow"]
datafusion = ["nanots-core/datafusion", "dep:datafusion", "dep:arrow"]
