[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nanots-db"
version = "0.1.0"
description = "NanoTS (Community Edition) Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.maturin]
bindings = "pyo3"
module-name = "nanots_db"
features = ["arrow", "datafusion"]
include = ["nanots_db.pyi", "py.typed"]
